--- a/overflow.css
+++ b/overflow.css
@@ -1,38 +1,5 @@
-/* styles.css */
-
-body {
-    font-family: Arial, sans-serif;
-    margin: 50px;
-    padding: 50px;
-  }
-  
-  .container {
-    width: 80%;
-    margin: 50px auto;
-    border: 2px solid #ccc;
-    padding: 20px;
-  }
-  
-  .box {
-    height: 200px;
-    overflow: auto;
-    border: 1px solid #000;
-    padding: 10px;
-  }
-  
-  .overflow-hidden {
+div{
+    border: 2px solid;
+    height: 100px;  
     overflow: hidden;
-  }
-  
-  .overflow-visible {
-    overflow: visible;
-  }
-  
-  .overflow-scroll {
-    overflow: scroll;
-  }
-  
-  .overflow-auto {
-    overflow: auto;
-  }
-  
+}
